# wellcum

./: .gitignore  README.md  greet.py  hotel.html  index.html  profilo.html  test_greet.py
.github/workflows/: velocitai-ci.yml
css/: styles.css
de/: hotel.html  index.html  profil.html
en/: hotel.html  index.html  profile.html
js/: main.js  profile.js
tron/: CLAUDE.md
velocitai/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
velocitai/config/: default.yaml
velocitai/data/registry/: owners.json
velocitai/docs/: ARCHITECTURE.md  CAPITOLATO_TECNICO.md  LEGAL_COMPLIANCE.md  PRICING.md  PRODUCTION_BACKENDS.md  PROPOSTA_COMMERCIALE.md  RESILIENCE.md  SALES_READINESS.md  SECURITY.md  esempio_verbale.txt
velocitai/docs/sales/: DPIA_TEMPLATE.md  EMAIL_OUTREACH.md  FAQ_OBIEZIONI.md  OFFERTA_TEMPLATE.md  ONE_PAGER.md  PITCH.md  PROPOSTA_PILOTA.md  make_onepager.py
velocitai/examples/: run_demo.py  video_demo.py
velocitai/tests/: test_anpr.py  test_cli.py  test_dashboard.py  test_fines.py  test_geometry.py  test_pipeline.py  test_pricing.py  test_resilience.py  test_robustness.py  test_security.py  test_speed.py  test_tracking.py  test_video_demo.py
velocitai/velocitai/: __init__.py  anpr.py  cli.py  config.py  dashboard.py  detection.py  fines.py  geometry.py  models.py  notifier.py  pipeline.py  pricing.py  recorder.py  registry.py  resilience.py  scenario.py  security.py  sources.py  speed.py  tracking.py  utils.py
