[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velocitai"
version = "1.0.0"
description = "Sistema di accertamento automatico dei limiti di velocita': rilevamento veicoli, stima velocita', ANPR, prova video e generazione/notifica del verbale (Art. 142 CdS)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "VelociTAI" }]
keywords = ["autovelox", "anpr", "traffic-enforcement", "speed", "codice-della-strada"]

# Il CORE gira a dipendenza-zero (solo libreria standard).
# PyYAML serve solo per caricare le configurazioni YAML (opzionale).
dependencies = []

[project.optional-dependencies]
config = ["PyYAML>=5.4"]
# Backend di produzione (visione artificiale, OCR, video, PDF, API).
prod = [
    "numpy>=1.21",
    "opencv-python-headless>=4.7",
    "ultralytics>=8.0",        # YOLOv8 (rilevamento veicoli)
    "easyocr>=1.7",            # OCR targhe
    "reportlab>=3.6",          # verbale in PDF
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
dev = ["pytest>=7.0"]

[project.scripts]
velocitai = "velocitai.cli:main"

[tool.setuptools]
packages = ["velocitai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
